# IHATECODING

./: .gitignore  Build-CSharp.ps1  Build.ps1  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: windows-release.yml
PowerWorkspace/: CodexCompletionWatcher.cs  CodexSessionLocator.cs  GrokSessionLocator.cs  IntegratedPowerShellHost.cs  MainWindow.cs  NativePowerShellHost.cs  NotificationBridge.cs  PowerWorkspace.csproj  Program.cs  ProjectDialog.cs  PtyBroker.cs  UsageReader.cs  WorkspaceBrowserHost.cs  WorkspaceProjects.cs  WorkspaceTabs.cs  app.manifest
PowerWorkspace/WebTerminal/: package-lock.json  package.json  pty-broker.js  terminal.html
PowerWorkspace/WebTerminal/PtyRuntime/: conoutSocketWorker.js  windowsConoutConnection.js
apps/ihc-desktop/: README.md  index.html  package.json
apps/ihc-desktop/scripts/: agent-browser-settings.test.mjs  browser-ui-pick.test.mjs  build.mjs  footer-provider-settings.test.mjs  i18n.test.mjs  media-browser.test.mjs  openai-status-core.test.mjs  phase2-core.test.mjs  phase2-smoke.ps1  phase3-core.test.mjs  phase3-persistence-smoke.ps1  phase3b-core.test.mjs  phase4-core.test.mjs  phase4-integration.test.mjs  phase5-core.test.mjs  phase5-integration.test.mjs  pointer-reorder.test.mjs  project-file-tree-integration.test.mjs  project-file-tree.test.mjs  settings-browser-preview.test.mjs
apps/ihc-desktop/src/: agent-browser-settings.ts  footer-provider-settings.ts  i18n.ts  main.ts  media-browser-core.ts  media-drawer.ts  openai-status-core.ts  optimization-settings.ts  phase2-core.ts  phase3-core.ts  phase3b-core.ts  phase4-controller.ts  phase4-core.ts  phase5-core.ts  pointer-reorder.ts  project-file-tree-view.ts  project-file-tree.ts  (+3 more)
apps/ihc-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/ihc-desktop/src-tauri/capabilities/: default.json
apps/ihc-desktop/src-tauri/src/: agent_browser_bridge.rs  agent_cli_status.rs  agent_runtime.rs  android_emulator.rs  browser_agent_automation.rs  browser_preview.rs  browser_ui_pick.js  browser_ui_pick.rs  cline_session.rs  codex_notify.rs  legacy_import.rs  lib.rs  main.rs  media_browser.rs  openai_status.rs  phone_notify.rs  project_files.rs  project_store.rs  provider_accounts.rs  provider_lifecycle.rs  provider_usage.rs  pty.rs  terminal_platform.rs  workspace_store.rs
apps/ihc-desktop/src-tauri/tests/: legacy_import_contract.rs
contracts/: pty-tauri-v2.md
fixtures/: projects-v1.json
rust/: MIGRATION_PLAN.md  PHASE2_ACCEPTANCE.md  PHASE3_ACCEPTANCE.md  PHASE4_ACCEPTANCE.md  PHASE5_ACCEPTANCE.md  PHASE6_ACCEPTANCE.md  PHASE6_RESULTS.md  README.md
rust/apps/ihc-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
rust/apps/ihc-desktop/src-tauri/capabilities/: default.json
rust/apps/ihc-desktop/src-tauri/icons/: icon.icns
rust/apps/ihc-desktop/src-tauri/src/: agent_runtime.rs  codex_notify.rs  grok_notify.rs  legacy_import.rs  lib.rs  main.rs  phone_notify.rs  production_import.rs  project_store.rs  provider_usage.rs  pty.rs  terminal_platform.rs  workspace_store.rs
rust/apps/ihc-desktop/src-tauri/tests/: workspace_store.rs
rust/contracts/: projects-v1.schema.json  pty-tauri-v2.md  pty-v1.md  storage-tauri-v1.md
rust/fixtures/: phase6-1-pane.projects.json  phase6-20-pane.projects.json  phase6-8-pane.projects.json
scripts/: phase6-compare.ps1
(+26 files in other folders)
