[package]
name = "ihatecoding"
version = "1.0.0"
description = "The AI workspace for autonomous development"
authors = ["IHATECODING contributors"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ihatecoding_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
# Tauri's child-WebView command is compiled as an error stub unless the
# multiwebview API is enabled. BrowserPane relies on that command to embed a
# browser beside terminal panes.
# Native WebView handles are version-coupled to Tauri's Wry dependencies.
# Keep the minor release pinned when using `Webview::with_webview` below.
tauri = { version = "~2.11.5", features = ["image-png", "unstable"] }
tauri-plugin-dialog = "2"
portable-pty = "0.9.0"
base64 = "0.22"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["time"] }
webview2-com = "~0.38.2"
windows-core = "~0.61.2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinHttp", "Win32_Security", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_JobObjects", "Win32_System_Memory", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
